@@ -371,7 +371,7 @@ public class ExpressionFactoryImpl extends ExpressionFactory {
             return TypeConverter.DEFAULT;
         }
         try {
-            return TypeConverter.class.cast(clazz.newInstance());
+            return TypeConverter.class.cast(clazz.getDeclaredConstructor().newInstance());
         } catch (Exception e) {
             throw new ELException("TypeConverter " + clazz + " could not be instantiated", e);
         }
@@ -396,7 +396,7 @@ public class ExpressionFactoryImpl extends ExpressionFactory {
                 Constructor<?> constructor = clazz.getConstructor(Builder.Feature[].class);
                 if (constructor == null) {
                     if (features == null || features.length == 0) {
-                        return TreeBuilder.class.cast(clazz.newInstance());
+                        return TreeBuilder.class.cast(clazz.getDeclaredConstructor().newInstance());
                     } else {
                         throw new ELException("Builder " + clazz + " is missing constructor (can't pass features)");
                     }
@@ -404,7 +404,7 @@ public class ExpressionFactoryImpl extends ExpressionFactory {
                     return TreeBuilder.class.cast(constructor.newInstance((Object) features));
                 }
             } else {
-                return TreeBuilder.class.cast(clazz.newInstance());
+                return TreeBuilder.class.cast(clazz.getDeclaredConstructor().newInstance());
             }
         } catch (Exception e) {
             throw new ELException("TreeBuilder " + clazz + " could not be instantiated", e);
